fix z-index

--- a/src/components/headerDropDown/index.scss
+++ b/src/components/headerDropDown/index.scss
@@ -55,7 +55,7 @@
     border-radius: 4px;
     box-shadow: 0 2px 8px 0 rgba(0, 0, 0, 0.24);
     //box-shadow: 0 2px 4px rgba(0,0,0,0.2);
-    z-index: 100;
+    z-index: 101;
     p{
       padding-left: 15px;
       //line-height: 25px;
